@@ -1,3 +1,6 @@
+* Fri Jun 28 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.6-0
+- Fix compliance markup validation for Defined Types
+
 * Tue Jun 25 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.5-0
 - Fix call to Hiera.warn in the compliance mapper
 
